crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__table_with_comments.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users {\n    // the key\n    id: integer() primaryKey // modifiers\n    email: text()\n}\n"
---
TableDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        value: "users",
    },
    columns: [
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 7,
                    },
                },
                value: "id",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 9,
                    },
                    end: Position {
                        line: 3,
                        column: 18,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 9,
                            },
                            end: Position {
                                line: 3,
                                column: 16,
                            },
                        },
                        value: Var(
                            "integer",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 19,
                            },
                            end: Position {
                                line: 3,
                                column: 29,
                            },
                        },
                        value: "primaryKey",
                    },
                    args: [],
                },
            ],
        },
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 4,
                        column: 10,
                    },
                },
                value: "email",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 12,
                    },
                    end: Position {
                        line: 4,
                        column: 18,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 12,
                            },
                            end: Position {
                                line: 4,
                                column: 16,
                            },
                        },
                        value: Var(
                            "text",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [],
        },
    ],
}
